--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,52 +1,13 @@
-version: 2
-jobs:
-   build:
-     docker:
-       - image: circleci/openjdk:8-node-browsers
-     steps:
-      - checkout
-      - run:
-          name: The Example App Java - Building and Testing
-          command: ./gradlew clean test
-      - run:
-          name: The Example App Java - Run Server
-          command: ./gradlew run
-          background: true
-      - run:
-          name: Wait for Started Server to warm up
-          command: sleep 5
-      - run:
-          name: Checkout E2E Tests
-          command: git clone https://github.com/contentful/the-example-app-e2e-tests.git ./test/e2e
-      - restore_cache:
-          keys:
-          - tea-e2e-tests-{{ checksum "./test/e2e/package.json" }}
-          - tea-e2e-tests-
-      - run:
-          name: Install E2E dependencies
-          command: sudo apt-get update; sudo apt-get install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
-      - run:
-          name: Install E2E Tests
-          command: cd ./test/e2e && npm install
-      - save_cache:
-          key: tea-e2e-tests-{{ checksum "./test/e2e/package.json" }}
-          paths:
-            - ./test/e2e/node_modules
-      - run:
-          name: Make Cypress different configuration aware
-          command: mv cypress-circleci.json cypress.json
-      - run:
-          name: The Example App Java - E2E
-          command: ./test/e2e/node_modules/.bin/cypress run
-      - run:
-          name: Save test results
-          command: |
-            mkdir -p ./junit/
-            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ./junit/ \;
-          when: always
-      - store_test_results:
-          path: ./junit
-      - store_artifacts:
-          path: ./junit
-      - store_artifacts:
-          path: ./cypress
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
+version: 2.1
+# Use a package of configuration called an orb.
+orbs:
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.4.1
+# Orchestrate or schedule a set of jobs
+workflows:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
+    jobs:
+      - welcome/run
